css/mycss.css
@import url('https://fonts.googleapis.com/css?family=Nunito&display=swap');

html, body {
    background-color: #1c1c1c;
    font-family: Nunito;
    height: 100%;
}

.colsx {
    background-color: white;
    max-width: 25%;
}

.coldx {
    background-color: #F0E7DB;
    color: black;
    padding-top: 250px;
    padding-left: 50px;
}

.welcome {
    font-size: 48pt;
}

.bluedot {
    color: #0b5ed7;
    font-size: 72pt;
    line-height: 10px;

}

.bluedot-small {
    color: #0b5ed7;
    font-size: 48pt;
    line-height: 10px;

}

.gray {
    color: #6e6e6e;
}

.navbar-brand {
    font-weight: 900;
    font-size: 150%;
}

.description {
    max-width: 600px;
    margin-top: 50px;
    font-weight: 400;
}

.particle {
    position: absolute;
    border-radius: 50%;
}

.navbar {
    padding-left: 100px !important;
    padding-right: 100px !important;
}

@media only screen and (max-width: 600px) {
    .welcome {
        font-size: 28pt;
    }

    .coldx {
        padding-left: 15px;
    }

    .colsx {
        max-width: 15%;
    }

    .nav-link {
        font-weight: 400 !important;
    }

    .navbar {
        padding-left: 15px !important;
        padding-right: 15px !important;
    }

}

